--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "phaser": "^3.54.0"
+    "phaser": "^3.54.0",
+    "phaser-matter-collision-plugin": "^0.10.2"
   },
   "devDependencies": {
     "webpack": "^5.30.0",
