--- a/package.json
+++ b/package.json
@@ -10,12 +10,6 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "matter-js": "^0.16.1",
-    "phaser": "^3.54.0"
-  },
-  "devDependencies": {
-    "webpack": "^5.30.0",
-    "webpack-cli": "^4.6.0"
-  }
+  "dependencies": {},
+  "devDependencies": {}
 }
